@@ -33,6 +33,11 @@ from the server before the cache size is checked. The
 blob_cache_size_check option defaults to 100. We passed 10, to check
 after writing 10% of the target size.
 
+.. We're going to wait for any threads we started to finish, so...
+
+   >>> import threading
+   >>> old_threads = list(threading.enumerate())
+
 We want to check for name collections in the blob cache dir. We'll try
 to provoke name collections by reducing the number of cache directory
 subdirectories.
@@ -66,11 +71,14 @@ directory.
     ...                      if os.path.exists(os.path.join(base, f)):
     ...                          raise
     ...     return size
-    
-    >>> db.storage._check_blob_size_thread.join()
 
-    >>> cache_size('blobs') < 5000
-    True
+    >>> def check():
+    ...     return cache_size('blobs') < 5000
+    >>> def onfail():
+    ...     return cache_size('blobs')
+
+    >>> from ZEO.tests.forker import wait_until
+    >>> wait_until("size is reduced", check, 99, onfail)
 
 If we read all of the blobs, data will be downloaded again, as
 necessary, but the cache size will remain not much bigger than the
@@ -81,37 +89,26 @@ target:
     ...     if data != chr(i)*100:
     ...         print 'bad data', `chr(i)`, `data`
 
-    >>> db.storage._check_blob_size_thread.join()
-
-    >>> cache_size('blobs') < 5000
-    True
+    >>> wait_until("size is reduced", check, 99, onfail)
 
     >>> for i in range(1, 101):
     ...     data = conn.root()[i].open().read()
     ...     if data != chr(i)*100:
     ...         print 'bad data', `chr(i)`, `data`
 
-    >>> db.storage._check_blob_size_thread.join()
-
     >>> for i in range(1, 101):
     ...     data = conn.root()[i].open('c').read()
     ...     if data != chr(i)*100:
     ...         print 'bad data', `chr(i)`, `data`
 
-    >>> db.storage._check_blob_size_thread.join()
-
-    >>> cache_size('blobs') < 5000
-    True
+    >>> wait_until("size is reduced", check, 99, onfail)
 
     >>> for i in range(1, 101):
     ...     data = open(conn.root()[i].committed(), 'rb').read()
     ...     if data != chr(i)*100:
     ...         print 'bad data', `chr(i)`, `data`
 
-    >>> db.storage._check_blob_size_thread.join()
-
-    >>> cache_size('blobs') < 5000
-    True
+    >>> wait_until("size is reduced", check, 99, onfail)
 
 Now let see if we can stress things a bit.  We'll create many clients
 and get them to pound on the blobs all at once to see if we can
@@ -131,7 +128,6 @@ provoke problems:
     ...         data = conn.root()[i].open('c').read()
     ...         if data != chr(i)*100:
     ...             print 'bad data', `chr(i)`, `data`
-    ...     db._storage._check_blob_size_thread.join()
     ...     db.close()
 
     >>> threads = [threading.Thread(target=run) for i in range(10)]
@@ -140,12 +136,18 @@ provoke problems:
     >>> for thread in threads:
     ...     thread.start()
     >>> for thread in threads:
-    ...     thread.join()
+    ...     thread.join(99)
+    ...     if thread.isAlive():
+    ...        print "Can't join thread."
 
-    >>> cache_size('blobs') < 5000
-    True
+    >>> wait_until("size is reduced", check, 99, onfail)
 
 .. cleanup
 
+    >>> for thread in threading.enumerate():
+    ...     if thread not in old_threads:
+    ...        thread.join(33)
+
     >>> db.close()
     >>> ZEO.ClientStorage.BlobCacheLayout.size = orig_blob_cache_layout_size
+
