@@ -14,6 +14,8 @@ Bugs Fixed
 
 - Fixed analyze.py and added test.
 
+- ZEO client blob cache size management is a little bit more robust.
+
 3.9.0b1 (2009-05-04)
 ====================
 
